--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -41,7 +41,7 @@ spec:
 
     clustersettings:
       recovery: true
-      monitoring: false
+      monitoring: true
 
     roles: 
       role3: true
