--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -39,6 +39,7 @@ spec:
     indextemplates:
       myindextemplate: true
       winlogbeat: true
+      api: true
 
     clustersettings:
       recovery: true
