--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -52,7 +52,7 @@ spec:
     apikeys:
       metricbeat: true
       filebeat: true
-      dummy: true
+      dummy: false
 
     kibanaspaces:
       metricbeat: true
