--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -51,7 +51,7 @@ spec:
 
     apikeys:
       metricbeat: true
-      filebeat: true
+      filebeat: false
       dummy: false
 
     kibanaspaces:
