--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -52,7 +52,7 @@ spec:
     apikeys:
       metricbeat: true
       filebeat: false
-      dummy: false
+      dummy: true
 
     kibanaspaces:
       metricbeat: true
