--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -51,7 +51,7 @@ spec:
 
     apikeys:
       metricbeat: false
-      filebeat: false
+      filebeat: true
       dummy: false
 
     kibanaspaces:
