--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -50,7 +50,7 @@ spec:
       role4: true
 
     apikeys:
-      metricbeat: false
+      metricbeat: true
       filebeat: true
       dummy: false
 
