--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -50,8 +50,8 @@ spec:
       role4: true
 
     apikeys:
-      metricbeat: true
-      filebeat: true
+      metricbeat: false
+      filebeat: false
       dummy: false
 
     kibanaspaces:
