--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -53,6 +53,7 @@ spec:
       metricbeat: true
       filebeat: true
       dummy: true
+      onehour: true
 
     kibanaspaces:
       metricbeat: true
