--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -38,7 +38,7 @@ spec:
 
     indextemplates:
       myindextemplate: false
-      winlogbeat: true
+      winlogbeat: false
       api: false
 
     clustersettings:
