--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -39,7 +39,7 @@ spec:
     indextemplates:
       myindextemplate: false
       winlogbeat: false
-      api: true
+      api: false
 
     clustersettings:
       recovery: true
