--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -36,7 +36,7 @@ spec:
     rolemappings:
       mapping1: true
 
-    indextemplates:
+    legacyindextemplates:
       myindextemplate: false
       winlogbeat: false
       api: false
