--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -39,7 +39,7 @@ spec:
     legacyindextemplates:
       myindextemplate: false
       winlogbeat: false
-      api: false
+      api: true
 
     clustersettings:
       recovery: true
