--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -33,6 +33,10 @@ spec:
     repos:
       myrepo: true
 
+    componenttemplates:
+      mycomponent1: true
+
+
     rolemappings:
       mapping1: true
 
