--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -45,6 +45,9 @@ spec:
       winlogbeat: true
       api: false
 
+    indextemplates:
+      api: true
+
     clustersettings:
       recovery: true
       monitoring: true
