--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -36,6 +36,7 @@ spec:
     componenttemplates:
       mycomponent1: true
       ecs: true
+      ecshost: true
 
     indextemplates:
       api: true
