--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -45,7 +45,7 @@ spec:
       api: true
 
     rolemappings:
-      mapping1: true
+      mapping1: false
 
     legacyindextemplates:
       myindextemplate: false
@@ -54,8 +54,8 @@ spec:
 
 
     clustersettings:
-      recovery: true
-      monitoring: true
+      recovery: false
+      monitoring: false
 
     roles: 
       role3: true
