--- a/charts/elastic-cluster/templates/legacyindextemplate-role6.yaml
+++ b/charts/elastic-cluster/templates/legacyindextemplate-role6.yaml
@@ -1,5 +1,5 @@
 {{ if  .Values.legacyindextemplates.role6 }}
-role6Version: elastic.elastic-operator/v1
+apiVersion: elastic.elastic-operator/v1
 kind: LegacyIndexTemplate
 metadata:
   name: {{ .Release.Name}}-legacyindextemplate-role6
