--- a/charts/elastic-cluster/templates/ingestapipeline-api.yaml
+++ b/charts/elastic-cluster/templates/ingestapipeline-api.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: IngestPipeline
 metadata:
   name: {{ .Release.Name}}-ingestpipeline-api
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: api
   cluster: {{ .Release.Name}}
