--- a/charts/elastic-cluster/templates/ingestpipeline-test3.yaml
+++ b/charts/elastic-cluster/templates/ingestpipeline-test3.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: IngestPipeline
 metadata:
   name: {{ .Release.Name}}-ingestpipeline-test3
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: test3
   cluster: {{ .Release.Name}}
