--- a/charts/elastic-cluster/templates/apikey-onehour.yaml
+++ b/charts/elastic-cluster/templates/apikey-onehour.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: ApiKey
 metadata:
   name: {{.Release.Name}}-apikey-onehour
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: onehour
   cluster: {{ .Release.Name}}
