--- a/charts/elastic-cluster/templates/componenttemplate-ecs2.yaml
+++ b/charts/elastic-cluster/templates/componenttemplate-ecs2.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: ComponentTemplate
 metadata:
   name: {{ .Release.Name}}-componenttemplate-ecs2
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: ecs2
   cluster: {{ .Release.Name}}
