--- a/charts/elastic-cluster/templates/ingestpipeline-mypipeline.yaml
+++ b/charts/elastic-cluster/templates/ingestpipeline-mypipeline.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: IngestPipeline
 metadata:
   name: {{ .Release.Name}}-ingestpipeline-mypipeline
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: mypipeline
   cluster: {{ .Release.Name}}
