--- a/charts/elastic-cluster/templates/kibanaspace-dummy.yaml
+++ b/charts/elastic-cluster/templates/kibanaspace-dummy.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: KibanaSpace
 metadata:
   name: {{ .Release.Name}}-kibanaspace-dummy
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: dummy
   cluster: {{ .Release.Name}}
