--- a/charts/elastic-cluster/templates/legacyindextemplate-role6.yaml
+++ b/charts/elastic-cluster/templates/legacyindextemplate-role6.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: LegacyIndexTemplate
 metadata:
   name: {{ .Release.Name}}-legacyindextemplate-role6
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: role6
   cluster: {{ .Release.Name}}
