--- a/charts/elastic-cluster/templates/legacyindextemplate-winlogbeat.yaml
+++ b/charts/elastic-cluster/templates/legacyindextemplate-winlogbeat.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: LegacyIndexTemplate
 metadata:
   name: {{ .Release.Name}}-legacyindextemplate-winlogbeat
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: winlogbeat
   cluster: {{ .Release.Name}}
