--- a/charts/elastic-cluster/templates/role-role7.yaml
+++ b/charts/elastic-cluster/templates/role-role7.yaml
@@ -3,7 +3,7 @@ apiVersion: elastic.elastic-operator/v1
 kind: ElasticRole
 metadata:
   name: {{ .Release.Name}}-role-role7
-  namespace: observability
+  namespace: {{ .Release.Namespace}}
 spec:
   name: {{ .Release.Name}}-role-role7
   cluster: {{ .Release.Name}}
