--- a/charts/elastic-cluster/values.yaml
+++ b/charts/elastic-cluster/values.yaml
@@ -69,6 +69,7 @@ apikeys:
 clustersettings:
   recovery: false  
   monitoring: false
+  routingallocationdisk: false
 
 legacyindextemplates:
   myindextemplate: false
