--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -59,6 +59,7 @@ spec:
     clustersettings:
       recovery: true
       monitoring: true
+      routingallocationdisk: true
 
     roles: 
       role3: true
