--- a/charts/elastic-cluster/templates/watcher-watch1.yaml
+++ b/charts/elastic-cluster/templates/watcher-watch1.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   name: watcher1
   cluster: {{ .Release.Name}}
+  secret: {{ .Release.Name}}-watcher1
   body: |
           {
             "trigger" : {
