--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: {{ .Release.Namespace }}  
 spec:
   version: {{ .Values.elastic.version }}
-  image: deckkh/elasticsearch:8.1.3
+#  image: deckkh/elasticsearch:8.1.3
 
   secureSettings:
   - secretName: mysecret
@@ -177,7 +177,7 @@ spec:
   - name: ingest
     count: {{ .Values.ingest.nodeset.count}}
     config:
-      node.roles: ['ingest']
+      node.roles: ['ingest','transform']
       node.store.allow_mmap: false            
       cluster.routing.allocation.awareness.attributes: zone
       node.attr.zone: ${ZONE}
