--- a/charts/elastic-cluster/templates/dataview-hello.yaml
+++ b/charts/elastic-cluster/templates/dataview-hello.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   name: hello
   cluster: {{ .Release.Name}}
+  space: "sprint"
   body: |
           {
             "data_view": {
