--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -33,7 +33,8 @@ spec:
       transform1: true
 
     dataviews:
-      hello: false
+      hello: true
+      kibaba: true
 
 
     ingestpipelines:
