--- a/charts/elastic-cluster/templates/dataview-kibana.yaml
+++ b/charts/elastic-cluster/templates/dataview-kibana.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Release.Name}}-dataview-kibana
   namespace: {{ .Release.Namespace}}
 spec:
-  name: hello
+  name: kibana
   cluster: {{ .Release.Name}}
   space: "sprint"
   body: |
@@ -13,7 +13,7 @@ spec:
           "override": true,
           "refresh_fields": true,          
           "data_view": {
-            "id": "hello",
+            "id": "kibana",
             "title": "kibana*",
             "fields": {},
             "typeMeta": {},
