--- a/charts/elastic-cluster/templates/connector-hello.yaml
+++ b/charts/elastic-cluster/templates/connector-hello.yaml
@@ -10,7 +10,7 @@ spec:
   space: "sprint"
   body: |
         {
-          "id" : "hello"
+          "id" : "hello",
           "name": "hello display name",
           "connector_type_id": ".index",
           "config": {
