--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -102,7 +102,7 @@ spec:
     kibanaspaces:
       metricbeat: true
       winlogbeat: false
-      rally: false
+      rally: true
       dummy: true
       api: true
       filebeat: true
