--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -79,8 +79,8 @@ spec:
 
     clustersettings:
       recovery: true
-      monitoring: true
-      routingallocationdisk: false
+      monitoring: false
+      routingallocationdisk: true
 
     roles: 
       role3: true
