--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -78,9 +78,9 @@ spec:
 
 
     clustersettings:
-      recovery: true
-      monitoring: false
-      routingallocationdisk: true
+      recovery: false
+      monitoring: true
+      routingallocationdisk: false
 
     roles: 
       role3: true
